apps/tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tools
  namespace: tools
spec:
  tls:
  - hosts:
      - "*.home.nikic.org"
    secretName: tools
  rules:
  - host: "vault.home.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden 
            port:
              number: 80
  - host: "iot.home.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant 
            port:
              number: 8123
